标准化全局返回，修复了程序报错时的返回与正常返回不一致导致前端崩溃的问题，修复了mapper重复扫描的问题